Closed Bug 1810546 Opened 2 years ago Closed 2 years ago

Early Hints: Inconsistency between network.early-hints.enabled and network.preload config

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: manuel, Assigned: manuel)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Currently whether Early Hints preload are started is controlled with the network.early-hints.enabled config. Later on when network.preload is disabled, these early hint responses aren't acted on and stopped with the timer after 10s.

This should be resolved either by:

  1. not starting early hint preloads when network.preload is false or
  2. using the preloads in content process when network.early-hints.enabled is true
Whiteboard: [necko-triaged]
Assignee: nobody → manuel
Status: NEW → ASSIGNED
Pushed by mbucher@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aef21fa857f5 Early Hints: Honor network.preload config by not preloading when disabled r=necko-reviewers,kershaw
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: